[project]
name = "coder_reveiwer_flow"
version = "0.1.0"
description = "coder_reveiwer_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
kickoff = "coder_reveiwer_flow.main:kickoff"
run_crew = "coder_reveiwer_flow.main:kickoff"
plot = "coder_reveiwer_flow.main:plot"
run_with_trigger = "coder_reveiwer_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
